--- a/package.json
+++ b/package.json
@@ -22,5 +22,18 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.3.0",
+        "lucide-react": "^0.451.0",
+        "tailwind-merge": "^2.5.3",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
