--- a/package.json
+++ b/package.json
@@ -24,15 +24,20 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@radix-ui/react-checkbox": "^1.1.2",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.1",
+        "@tabler/icons-react": "^3.19.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.3.0",
         "lucide-react": "^0.451.0",
+        "react-day-picker": "^8.10.1",
         "tailwind-merge": "^2.5.3",
         "tailwindcss-animate": "^1.0.7"
     }
